--- a/ITMD361Fall2025/Labs/Lab5/PracticeIndex.html
+++ b/ITMD361Fall2025/Labs/Lab5/PracticeIndex.html
@@ -10,6 +10,8 @@
     <form action="action_page.php" method="POST">
         <div>
             <!-- Text types can be used for names -->
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname" value="John"><br>
             <!-- Placeholder gives an example/default -->
             <!-- Required will not allow you to submit if it is blank -->
             <!-- FIRST NAME -->
@@ -19,6 +21,8 @@
         
         <div>
             <!-- LAST NAME -->
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value="Doe"><br><br>
 
         </div>
         <br>
@@ -74,5 +78,6 @@
     </form>
 </body>
 </html>
+
 
 
