--- a/ITMD361Fall2025/Projects/Project1/hobby.html
+++ b/ITMD361Fall2025/Projects/Project1/hobby.html
@@ -30,21 +30,21 @@
 
   <h2>Games I Enjoy Playing</h2>
 
-  <img src="images/game1.jpg" width="400">
+  <img src="images/game1.jpg" alt="Deadlock" width="400">
   <p>
     Deadlock is a fast-paced, competitive MOBA shooter developed by Valve.
     It takes place in a fantasy version of New York and features a 6v6 multiplayer format with unique characters, each with their own abilities.
     The game combines strategic team play with fast action.
   </p>
 
-  <img src="images/game2.jpg" width="400">
+  <img src="images/game2.jpg" alt="The Binding of Isaac" width="400">
   <p>
     The Binding of Isaac is a roguelike dungeon crawler known for its randomly generated levels.
     Players guide Isaac through a monster-filled basement using power-ups and strange items to survive.
     Each run is different, making the game highly replayable and challenging.
   </p>
 
-  <img src="images/game3.jpg" width="400">
+  <img src="images/game3.jpg" alt="Grounded 2" width="400">
   <p>
     Grounded 2 continues the tiny survival adventure where players are shrunk down and must survive in a backyard full of bugs, secrets, and environmental dangers.
     With new enemies, tools, and areas to explore, it expands on the original’s gameplay and storytelling.
