--- a/ITMD361Fall2025/Projects/Project1/index.html
+++ b/ITMD361Fall2025/Projects/Project1/index.html
@@ -46,9 +46,9 @@
   </ol>
 
   <h2>Images of Data Science</h2>
-  <img src="images/data1.jpg" width="300">
-  <img src="images/data2.jpg" width="300">
-  <img src="images/data3.jpg" width="300">
+  <img src="images/data1.jpg" alt="Data Science Image 1" width="300">
+  <img src="images/data2.jpg" alt="Data Science Image 2" width="300">
+  <img src="images/data3.jpg" alt="Data Science Image 3" width="300">
 
   <h2>Watch a Short Video About Data Science</h2>
   <iframe width="400" height="300" src="https://www.youtube.com/embed/X3paOmcrTjQ" frameborder="0" allowfullscreen></iframe>
