--- a/ITMD361Fall2025/Labs/Lab5/Index.html
+++ b/ITMD361Fall2025/Labs/Lab5/Index.html
@@ -1,3 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <meta charset="utf-8">
+  <title>Lab5</title>
+</head>
+
+<body>
+  <h1>Volunteer Form</h1>
+
+  <form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
+  
+    <fieldset>
+      <legend>My Info</legend>
+      
+      <label for="first_name_field">First Name:</label>
+      <input type="text" id="first_name_field" name="first_name_field" required><br>
+
+      <label for="last_name_field">Last Name:</label>
+      <input type="text" id="last_name_field" name="last_name_field" required><br>
+
+      <label for="phone_field">Phone:</label>
+      <input type="tel" id="phone_field" name="phone_field"><br>
+
+      <label for="email_field">Email:</label>
+      <input type="email" id="email_field" name="email_field" required><br>
+
+      <label>Gender:</label><br>
+      <input type="radio" id="male" name="gender_field" value="Male">
+      <label for="male">Male</label>
+      <input type="radio" id="female" name="gender_field" value="Female">
+      <label for="female">Female</label><br>
+
+      <label for="age_field">Age:</label><br>
+      <select id="age_field" name="age_field">
+        <option value="under 18">Under 18</option>
+        <option value="over 18">Over 18</option>
+      </select> 
+    </fieldset>
+
+    <fieldset>
+      <legend>My Availability</legend>
+
+      <h2>Days Available:</h2>
+
+      <label for="sunday">Sunday</label>
+      <input type="checkbox" id="sunday" name="available_field[]" value="Sunday"><br>
+      <label for="monday">Monday</label>
+      <input type="checkbox" id="monday" name="available_field[]" value="Monday"><br>
+      <label for="tuesday">Tuesday</label>
+      <input type="checkbox" id="tuesday" name="available_field[]" value="Tuesday"><br>
+      <label for="wednesday">Wednesday</label>
+      <input type="checkbox" id="wednesday" name="available_field[]" value="Wednesday"><br>
+      <label for="thursday">Thursday</label>
+      <input type="checkbox" id="thursday" name="available_field[]" value="Thursday"><br>
+      <label for="friday">Friday</label>
+      <input type="checkbox" id="friday" name="available_field[]" value="Friday"><br>
+      <label for="saturday">Saturday</label>
+      <input type="checkbox" id="saturday" name="available_field[]" value="Saturday"><br>
+
+      <h2>Comments</h2>
+
+      <textarea id="comments_field" name="comments_field" rows="4" cols="30"></textarea>
+    </fieldset>
+
+    <input type="hidden" name="hidden_field" value="Efren B">
+
+    <input type="submit" value="Submit">
+  </form>
+</body>
+
+</html>
